[bumpversion]
current_version = 0.4.0
commit = True
tag = True

[metadata]
name = passlib-cli
version = attr: passlib_cli.metadata.version
description = CLI utils for passlib
long-description = file: README.md
long-description-content-type = text/markdown
url = 'https://github.com/fredrikhl/passlib-cli'
author = fredrikhl
license = MIT
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Topic :: Security
	Topic :: System :: Systems Administration
	Topic :: Utilities

[options]
package_dir = 
	= src/
packages = find:
install_requires = 
	passlib ~= 1.7.4

[options.packages.find]
where = src

[options.extras_require]
dev = 
	build == 0.2.1
	bump2version ~= 1.0
	pytest ~= 6.2
bcrypt = 
	bcrypt ~= 4.0.1
scrypt = 
	scrypt ~= 0.8.20

[options.entry_points]
console_scripts = 
	passlib-autocomplete = passlib_cli.complete:main
	passlib-mkpasswd = passlib_cli.mkpasswd:main
	passlib-pwgen = passlib_cli.generate:main
	passlib-totp = passlib_cli.totp:main

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[bumpversion:file:src/passlib_cli/metadata.py]
